--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -6,13 +6,16 @@
 
 .dashboard {
   background-color: white;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  /* height: 100vh; */
   display: flex;
   /* align-items: center; */
-  justify-content: center;
+  /* justify-content: center;
   flex-direction: row;
-  position: relative;
+  position: relative; */
+
+  display: grid;
+  grid-template-columns: 15% 85%;
 }
 
 .dashboard-container {
@@ -23,7 +26,7 @@
   flex-direction: column;
   /* background-color: #f1f7f7; */
   width: 100%;
-  height: 80%;
+  /* height: 80%; */
   margin-top: 10px;
   /* padding: 1rem 3rem 1rem 3rem; */
 }
@@ -59,10 +62,14 @@
   font-size: 0.9rem;
 }
 .dashboard-wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  justify-items: center;
-  width: 95%;
+  /* display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  justify-items: center; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 70%;
   /* margin-top: 20px; */
   /* background-color: red; */
 }
@@ -77,6 +84,7 @@
   padding: 15px;
   flex-direction: column;
   border: 1px solid #e7eaf3;
+  margin-top: 20px;
 }
 
 .dash-total {
@@ -95,12 +103,29 @@
 .wrapper2 {
   margin-top: 20px;
 }
-.dash-wrap {
-  /* background-color: blueviolet; */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
+@media screen and (max-width: 985px) {
+  .welcome h1 {
+    font-size: 1.2rem;
+  }
+  .dashboard {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    /* background-color: tomato; */
+  }
+  .welcome {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 500px) {
+  .welcome h1 {
+    font-size: 1rem;
+  }
+  .dashboard-wrapper {
+    width: 100%;
+  }
 }
