--- a/src/Styles/Doc.css
+++ b/src/Styles/Doc.css
@@ -27,8 +27,8 @@
   flex-direction: column;
   /* background-color: #f1f7f7; */
   width: 100%;
-  height: 80%;
-  margin-top: 40px;
+  height: 90%;
+  /* margin-top: 40px; */
   /* padding: 1rem 3rem 1rem 3rem; */
 }
 
