--- a/src/Styles/Expense.css
+++ b/src/Styles/Expense.css
@@ -14,11 +14,14 @@
   background-color: white;
   width: 100vw;
   height: 100vh;
-  display: flex;
+  /* display: flex; */
   /* align-items: center; */
-  justify-content: center;
+  /* justify-content: center;
   flex-direction: row;
-  position: relative;
+  position: relative; */
+
+  display: grid;
+  grid-template-columns: 15% 85%;
 }
 
 .expense {
@@ -32,12 +35,12 @@
   display: flex;
   position: relative;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   flex-direction: column;
   /* background-color: #f1f7f7; */
   width: 100%;
   height: 80%;
-  margin-top: 40px;
+  /* margin-top: 40px; */
   /* padding: 1rem 3rem 1rem 3rem; */
 }
 
@@ -53,6 +56,10 @@
   margin-bottom: 10px;
   padding: 10px 20px;
   padding-right: 40px;
+}
+
+.dateFilter {
+  display: none;
 }
 
 .expense-heading {
@@ -82,21 +89,19 @@
   justify-content: space-between;
   flex-direction: row;
 }
-.expense-creditors {
-  width: 15%;
-  height: 90%;
-  border: 1px solid black;
-  overflow-x: hidden;
+.expense-table {
+  border: 1px solid #e7eaf3;
 }
 .all-expenses {
   /* background-color: blue; */
   height: 100%;
-  width: 95%;
+  width: 80%;
   display: flex;
   align-items: center;
   position: relative;
   /* justify-content: center; */
   flex-direction: column;
+  margin-right: 10px;
 }
 
 .expense-table-head {
@@ -106,24 +111,73 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  margin: 10px 0 10px 0;
+  /* margin: 10px 0 10px 0; */
 }
 
 .expense-table-head h3 {
   color: rgba(0, 0, 0, 0.62);
   font-size: 0.9rem;
 }
+.expense-creditors {
+  /* width: 80%; */
+  height: 50%;
+}
 @media screen and (max-width: 985px) {
   .expense-head h1 {
     font-size: 1.2rem;
+  }
+  .expenses {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    /* background-color: tomato; */
   }
   .ham {
     display: unset;
     z-index: 6;
   }
+  .expense-container {
+    display: flex;
+    position: relative;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    /* background-color: #f1f7f7; */
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    /* padding: 1rem 3rem 1rem 3rem; */
+  }
 }
+@media screen and (max-width: 900px) {
+  .full-expense {
+    display: flex;
+    align-items: center;
+    justify-content: unset;
+    flex-direction: column;
+  }
+  .expense-creditors {
+    width: 80%;
+    height: 30%;
+  }
+  .all-expenses {
+    height: 70%;
+    margin-right: unset;
+  }
+  .expense-date-container {
+    display: none;
+  }
+  .dateFilter {
+    display: unset;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .expense-head h1 {
     font-size: 1rem;
+  }
+  .all-expenses {
+    width: 100%;
   }
 }
