--- a/src/Styles/Feed.css
+++ b/src/Styles/Feed.css
@@ -7,11 +7,13 @@
   background-color: white;
   width: 100vw;
   height: 100vh;
-  display: flex;
+  /* display: flex; */
   /* align-items: center; */
-  justify-content: center;
+  /* justify-content: center;
   flex-direction: row;
-  position: relative;
+  position: relative; */
+  display: grid;
+  grid-template-columns: 15% 85%;
 }
 
 .feed-container {
@@ -22,8 +24,8 @@
   flex-direction: column;
   /* background-color: #f1f7f7; */
   width: 100%;
-  height: 80%;
-  margin-top: 40px;
+  height: 90%;
+  /* margin-top: 40px; */
   /* padding: 1rem 3rem 1rem 3rem; */
 }
 
@@ -83,7 +85,7 @@
   color: rgba(0, 0, 0, 0.62);
   font-size: 0.9rem;
 }
-@media screen and (max-width: 916px) {
+@media screen and (max-width: 985px) {
   .feed-head h1 {
     font-size: 1.2rem;
   }
