--- a/src/Styles/Income.css
+++ b/src/Styles/Income.css
@@ -8,11 +8,13 @@
   background-color: white;
   width: 100vw;
   height: 100vh;
-  display: flex;
+  /* display: flex; */
   /* align-items: center; */
-  justify-content: center;
+  /* justify-content: center;
   flex-direction: row;
-  position: relative;
+  position: relative; */
+  display: grid;
+  grid-template-columns: 15% 85%;
 }
 
 .expense {
@@ -30,8 +32,8 @@
   flex-direction: column;
   /* background-color: #f1f7f7; */
   width: 100%;
-  height: 80%;
-  margin-top: 40px;
+  height: 90%;
+  /* margin-top: 40px; */
   /* padding: 1rem 3rem 1rem 3rem; */
 }
 
