--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@ body {
   align-content: center;
   text-align: center;
 }
+
+.form-err {
+  color: red;
+  font-size: 0.8rem;
+}
 input {
   border-radius: 0;
   -webkit-appearance: none;
@@ -394,7 +399,7 @@ input {
   height: 0;
   overflow: hidden;
   left: 0;
-  width: 100%;
+  width: 105px;
   transition: all ease-in-out 0.5s;
   box-shadow: 2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
     6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
@@ -437,6 +442,9 @@ input {
   top: 0;
   height: 100%;
   z-index: 8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .form-background2 {
   background-color: rgba(0, 0, 0, 0.359);
@@ -445,6 +453,54 @@ input {
   top: 0;
   height: 100%;
   z-index: 8;
+}
+.pay-confirm {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 30%;
+  border-radius: 7px;
+  padding: 20px;
+  text-align: center;
+}
+.btn-pay-confirm {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  margin: 20px 0;
+}
+.btn-pay {
+  margin-top: 10px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  /* background-color: white; */
+  background-color: #377dff;
+  padding: 5px 9px;
+  border-radius: 7px;
+  font-family: var(--Nunito);
+  transition: all ease-in-out 0.5s;
+}
+
+.btn-back {
+  align-self: flex-start;
+  margin-bottom: 10px;
+  border: none;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  font-family: var(--Nunito);
+  cursor: pointer;
+}
+
+.btn-pay:hover {
+  opacity: 0.7;
 }
 .toggle-btn-container {
   width: 100%;
@@ -503,6 +559,7 @@ input {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
   /* background-color: red; */
 }
 
@@ -569,12 +626,41 @@ input {
   width: 100%;
   /* height: 100%; */
 }
+.filter-container {
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  align-self: flex-start;
+  font-size: 0.7rem;
+}
 
+.filter-container button {
+  background-color: transparent;
+  border: 1px solid #1e2139;
+  margin-left: 10px;
+  padding: 2px 9px;
+  font-family: var(--Nunito);
+  font-size: 0.7rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.sort-date input,
+.status-filter select {
+  border: 1px solid #1e2139;
+  font-family: var(--Nunito);
+}
+
+.to {
+  margin-left: 20px;
+}
 .table-container {
   background-color: #ffffff;
   width: 100%;
   max-height: 80%;
-  overflow-x: hidden;
+  overflow: scroll;
   /* border: 2px solid rgba(0, 0, 0, 0.606); */
   padding: 0 10px 0 10px;
   border-radius: 5px;
@@ -672,6 +758,7 @@ td {
 } */
 .hide-background {
   position: absolute;
+  display: none;
 }
 @media screen and (max-width: 1120px) {
   .title,
@@ -776,5 +863,8 @@ td {
   .plus-circle {
     padding: 6px;
     margin: unset;
+  }
+  .new-options {
+    left: -100%;
   }
 }
