--- a/src/Styles/Expense.css
+++ b/src/Styles/Expense.css
@@ -84,9 +84,9 @@
   height: 100%;
   width: 95%;
   display: flex;
-  /* align-items: center; */
+  align-items: center;
   position: relative;
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: row;
 }
 .expense-table {
@@ -135,7 +135,7 @@
   }
   .ham {
     display: unset;
-    z-index: 6;
+    /* z-index: 6; */
   }
   .expense-container {
     display: flex;
