--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -89,6 +89,7 @@
   flex-direction: column;
   max-width: 650px;
   min-width: 450px;
+  max-height: 100%;
 }
 
 /* .expense {
@@ -122,7 +123,7 @@
   /* background-color: red; */
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   flex-direction: column;
   width: 100%;
   /* height: 100vh; */
