--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,53 @@ input {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
+  /* background: linear-gradient(rgba(0, 0, 0, 0.633), rgba(0, 0, 0, 0.865)),
+    url("../Photos/chicksbg.jpg") center/cover no-repeat; */
+}
+.log-out-logo {
+  margin-bottom: 20px;
+}
+
+.logout-icon {
+  margin-right: 5px;
+}
+
+.btn-logout {
+  background-color: rgb(255, 93, 93);
+  border: none;
+  padding: 3px 6px;
+  font-family: var(--Nunito);
+  font-size: 0.8rem;
+  color: white;
+  font-weight: 600;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  cursor: pointer;
+  transition: all ease-in-out 0.5s;
+}
+
+.loading-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.582);
+  backdrop-filter: blur(5px);
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  color: white;
+}
+
+.btn-logout:hover {
+  transform: scale(1.04);
 }
 
 .not-logged-in h1 {
@@ -53,7 +100,7 @@ input {
   color: #2070e7;
 }
 .not-logged-in img {
-  width: 200px;
+  width: 150px;
 }
 
 .capex-supplier {
@@ -701,7 +748,9 @@ td {
   border-top: 1px solid rgba(0, 0, 0, 0.218);
   border-bottom: 1px solid rgba(0, 0, 0, 0.218) !important;
 }
-
+.dashboard-total {
+  position: relative !important;
+}
 .btn-generate {
   background-color: white;
   border: 1px solid #90b6f0;
@@ -807,6 +856,15 @@ td {
   }
   th {
     font-size: 0.7rem;
+  }
+  .sort-date {
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    flex-direction: column;
+  }
+  .to {
+    margin: unset;
   }
 }
 @media screen and (max-width: 620px) {
