--- a/src/Styles/signup.css
+++ b/src/Styles/signup.css
@@ -88,6 +88,11 @@
   font-size: 1rem;
   cursor: pointer;
   transition: all ease-in-out 0.5s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
 
 .btn-create:hover {
