--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,15 @@
   --Nunito: "Nunito", sans-serif;
 }
 
+p {
+  font-size: 0.7rem !important;
+}
+
 body {
   font-family: var(--Nunito);
 }
 
 .App {
-  /* height: 100vh; */
   display: grid;
   justify-content: center;
   align-content: center;
@@ -24,7 +27,8 @@ body {
   color: red;
   font-size: 0.8rem;
 }
-input {
+input,
+select {
   border-radius: 0;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -38,8 +42,6 @@ input {
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  /* background: linear-gradient(rgba(0, 0, 0, 0.633), rgba(0, 0, 0, 0.865)),
-    url("../Photos/chicksbg.jpg") center/cover no-repeat; */
 }
 .log-out-logo {
   margin-bottom: 20px;
@@ -82,8 +84,33 @@ input {
   color: white;
 }
 
+.depr-help {
+  cursor: pointer;
+  color: #2070e7;
+  /* font-size: 1.1rem !important; */
+}
+
 .btn-logout:hover {
   transform: scale(1.04);
+  background-color: rgb(255, 159, 159);
+}
+
+.depr-msg-container {
+  background-color: white;
+  text-align: center;
+  width: 50%;
+  position: absolute;
+  bottom: 30px;
+  z-index: 12;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07);
+  border: 0.5px solid rgb(141, 141, 141);
 }
 
 .not-logged-in h1 {
@@ -101,6 +128,25 @@ input {
 }
 .not-logged-in img {
   width: 150px;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff1a;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #377dff;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #afcbff;
 }
 
 .capex-supplier {
@@ -153,10 +199,10 @@ input {
 
 .view-report {
   background-color: white;
-  border: 1px solid #90b6f0;
+  border: 1px solid #a6c9fd;
   margin-top: 10px;
   padding: 10px;
-  border-radius: 8px;
+  border-radius: 0 0 8px 8px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -165,6 +211,7 @@ input {
   font-family: "Nunito", sans-serif;
   color: #2070e7;
   transition: all ease-in-out 0.4s;
+  font-size: 0.7rem;
 }
 
 .view-report:hover,
@@ -355,20 +402,22 @@ input {
   /* justify-content: center; */
   flex-direction: column;
   height: 100%;
-  max-height: 1000px;
-  width: 90%;
+  width: 100%;
   z-index: 9;
   background-color: white;
   padding: 10px;
-  border-radius: 10px;
-  box-shadow: 9.1px 5.4px 2.2px -7px rgba(0, 0, 0, 0.002),
-    17.3px 10.3px 5.3px -7px rgba(0, 0, 0, 0.005),
-    25.4px 15px 10px -7px rgba(0, 0, 0, 0.009),
-    35.1px 20.8px 17.9px -7px rgba(0, 0, 0, 0.014),
-    50.8px 30.1px 33.4px -7px rgba(0, 0, 0, 0.019),
-    98px 58px 80px -7px rgba(0, 0, 0, 0.03);
-  border: 1px solid rgb(0, 0, 0);
-  position: absolute;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
+.btn-close {
+  transition: all ease-in-out 0.3s;
+  cursor: pointer;
+}
+
+.btn-close:hover {
+  color: red;
 }
 
 .outputs {
@@ -720,7 +769,7 @@ table {
 th {
   border-bottom: 1px solid rgba(0, 0, 0, 0.198);
   padding: 10px;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   position: sticky;
   top: 0;
   background-color: white;
@@ -728,7 +777,7 @@ th {
 
 td {
   text-align: center;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   padding: 15px 0;
   /* background-color: red; */
   /* border-bottom: 1px solid rgba(0, 0, 0, 0.218); */
@@ -766,6 +815,48 @@ td {
   color: #2070e7;
   transition: all ease-in-out 0.4s;
 }
+
+.download-table-xls-button {
+  color: #0f8500;
+  border-color: #0f8500;
+  margin-right: 5px;
+}
+
+.xls-download {
+  background-color: transparent;
+  padding: 2px 10px;
+  cursor: pointer;
+  border: 0.5px solid gray;
+  color: #0f8500;
+  border-color: #0f8500;
+  transition: all ease-in-out 0.3s;
+}
+
+.xls-download:hover {
+  background-color: #0f8500;
+  color: white;
+}
+
+.inv-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 100%;
+}
+
+.download-table-xls-button:hover {
+  background-color: #0f8500;
+}
+
+.btn-generate-container {
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
 .extra-info {
   /* background-color: red; */
   display: grid;
