--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -93,7 +93,7 @@
 .opex-container {
   display: flex;
   align-items: center;
-  padding: 15px;
+  padding: 13px;
   padding-left: 1rem;
   justify-content: space-between;
   flex-direction: row;
@@ -104,7 +104,7 @@
   color: black;
 }
 
-.opex-link a {
+/* .opex-link a {
   display: flex;
   align-items: center;
   padding: 10px;
@@ -113,10 +113,9 @@
   flex-direction: row;
   text-decoration: none;
   width: 100%;
-  /* border-radius: 4px; */
   border-left: 4px solid transparent;
   color: black;
-}
+} */
 
 .link-desc {
   transition: all ease-in-out 0.3s;
