--- a/src/Styles/Feed.css
+++ b/src/Styles/Feed.css
@@ -24,9 +24,10 @@
   flex-direction: column;
   /* background-color: #f1f7f7; */
   width: 100%;
-  height: 90%;
+  height: 100%;
   /* margin-top: 40px; */
   /* padding: 1rem 3rem 1rem 3rem; */
+  padding-bottom: 30px;
 }
 
 .feed-head {
@@ -66,7 +67,7 @@
   width: 95%;
   display: flex;
   align-items: center;
-  position: relative;
+  /* position: relative; */
   /* justify-content: center; */
   flex-direction: column;
 }
