--- a/src/Styles/Income.css
+++ b/src/Styles/Income.css
@@ -74,7 +74,7 @@
   width: 95%;
   display: flex;
   align-items: center;
-  position: relative;
+  /* position: relative; */
   /* justify-content: center; */
   flex-direction: column;
 }
