--- a/src/Styles/signup.css
+++ b/src/Styles/signup.css
@@ -48,6 +48,7 @@
     41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
     100px 100px 80px rgba(0, 0, 0, 0.07);
   /* height: 95%; */
+  padding: 0 10px;
 }
 .user-validation-wrapper {
   /* background-color: blue; */
