--- a/src/Website/SiteApp.css
+++ b/src/Website/SiteApp.css
@@ -30,6 +30,10 @@
   font-size: 0.75rem;
   transition: all ease-in-out 0.3s;
 }
+.banner {
+  width: 80%;
+  margin-bottom: 20px;
+}
 
 .nav-started:hover {
   background-color: #2070e7;
@@ -62,7 +66,7 @@
   text-align: left;
   padding: 10px;
   width: 100%;
-  max-width: 648px;
+  max-width: 800px;
 }
 
 .hero-details h1 {
@@ -89,6 +93,10 @@
   top: 25px;
   position: fixed;
   z-index: 11;
+}
+
+.hero-headerh4 {
+  font-size: 7.2rem;
 }
 
 .nav-menu {
