--- a/src/Website/SiteApp.css
+++ b/src/Website/SiteApp.css
@@ -117,12 +117,52 @@
   /* color: #677788; */
 }
 
+.job-back {
+  background-color: rgba(0, 0, 0, 0.317);
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 2;
+  top: 0;
+  left: 0;
+}
+.job-apply {
+  background-color: white;
+  position: fixed;
+  width: 50%;
+  height: 100vh;
+  z-index: 999;
+  border-radius: 0 20px 20px 0;
+  top: 0;
+  left: -100vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  overflow-x: scroll;
+  transition: all ease-in-out 0.6s;
+}
+
+.show-job-apply {
+  left: 0 !important;
+}
+
 .hero-menu {
   z-index: 11;
+  display: none;
+}
+
+.btn-apply {
+  background-color: #2070e7;
+  border: 0.3px solid black;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-bottom: 10px;
 }
 
 .hero-header {
-  background-color: rgba(119, 119, 119, 0.513);
+  background-color: transparent;
   padding: 10px;
   border-radius: 30px;
   backdrop-filter: blur(3px);
@@ -133,7 +173,7 @@
   flex-direction: row;
   position: absolute;
   top: 25px;
-  position: fixed;
+  /* position: fixed; */
   z-index: 11;
 }
 
@@ -284,7 +324,7 @@
   text-align: left;
   color: black !important;
   padding: 0 20px;
-  height: 100vh;
+  /* height: 100vh; */
   position: relative;
   /* background-color: rgb(245, 245, 245); */
   width: 100%;
@@ -791,6 +831,64 @@
     margin-top: unset;
   }
 }
+@media screen and (max-width: 970px) {
+  .started-2-details {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 100%;
+    /* background-color: red; */
+    height: 100%;
+    justify-items: center;
+    row-gap: 20px;
+    column-gap: 20px;
+  }
+  .features-gd-1 {
+    background-color: white;
+    border: 0.5px solid rgba(98, 98, 98, 0.205);
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    justify-content: unset;
+    flex-direction: row;
+    width: 100%;
+    box-shadow: 6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+      22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+      100px 100px 80px rgba(0, 0, 0, 0.07);
+
+    border-radius: 7px;
+  }
+  .footer-btn-container {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 470px) {
+  .features-gd-1 {
+    background-color: white;
+    border: 0.5px solid rgba(98, 98, 98, 0.205);
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    justify-content: unset;
+    flex-direction: column;
+    width: 100%;
+    box-shadow: 6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+      22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+      100px 100px 80px rgba(0, 0, 0, 0.07);
+    border-radius: 7px;
+  }
+  .hero-details h1 {
+    font-family: "Roboto Condensed", sans-serif !important;
+    font-size: 50px;
+    /* color: #677788; */
+  }
+  .ft-col-1 {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .banner {
+    width: 90%;
+  }
+}
 @media screen and (min-width: 1100px) {
   .service {
     max-width: unset;
@@ -827,4 +925,20 @@
     font-size: 70px;
     max-width: unset;
   } */
+}
+@media screen and (max-width: 805px) {
+  .trade-input {
+    width: 90% !important;
+  }
+}
+@media screen and (max-width: 600px) {
+  .job-apply {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 450px) {
+  .job-apply {
+    width: 100%;
+    border-radius: unset;
+  }
 }
