--- a/src/Styles/FarmHands.css
+++ b/src/Styles/FarmHands.css
@@ -72,7 +72,7 @@
   justify-content: center;
   flex-direction: column;
   /* border: 1px solid rgba(69, 69, 69, 0.303); */
-  overflow-x: scroll;
+  overflow: scroll;
 }
 
 .search {
@@ -106,11 +106,15 @@
   padding: 40px;
   transition: all ease-in-out 0.4s;
   border: 1px solid gray;
-  color: rgb(49, 49, 49);
+  color: white;
   text-decoration: none;
   font-size: 1.3rem !important;
   font-weight: 600;
   text-align: center;
+}
+
+.drug-item {
+  color: rgb(40, 40, 40) !important;
 }
 
 .trade-item:hover {
